Sun Jun 12 14:05:45 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_cipher.c (ossl_cipher_get_auth_tag,
	  ossl_cipher_set_auth_tag): Check if the cipher flags retrieved by
	  EVP_CIPHER_CTX_flags() includes EVP_CIPH_FLAG_AEAD_CIPHER to see if
	  the cipher supports AEAD. AES-GCM was the only supported in OpenSSL
	  1.0.1.

	  (Init_ossl_cipher): Fix doc; OpenSSL::Cipher::AES.new(128, :GCM) can't
	  work.

	* ext/openssl/openssl_missing.h: Define EVP_CTRL_AEAD_{GET,SET}_TAG if
	  missing. They are added in OpenSSL 1.1.0, and have the same value as
	  EVP_CTRL_GCM_{GET,SET}_TAG and EVP_CTRL_CCM_{GET,SET}_TAG.

Sun Jun 12 13:47:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* test/openssl/test_engine.rb (test_openssl_engine_builtin,
	  test_openssl_engine_by_id_string): Skip test if 'openssl' engine is
	  already loaded. And test the number increased by Engine.load{_by_id,},
	  not the total count of loaded engines. Previously, we called
	  OpenSSL::Engine.cleanup every time running a test case, but we no
	  longer can do it.
	  [ruby-core:75225] [Feature #12324]

Sun Jun 12 09:24:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (append_fspath): normalize directory name to be appended
	  on OS X.  [ruby-core:75957] [Ruby trunk Bug#12483]
	  https://github.com/rails/rails/issues/25303#issuecomment-224834804

Sat Jun 11 23:07:32 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/forwardable.rb (_delegator_method): get rid of a warning which
	  causes test failures introduced at r55376.

Sat Jun 11 18:37:58 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* ext/json/lib/*.rb: Removed some comments. Because these are unnecessary
	  class description. [ci skip][Bug #12255][ruby-core:74835]

Sat Jun 11 15:19:38 2016  takiy33  <takiy33@users.noreply.github.com>

	* lib/net/smtp.rb: [DOC] Remove dead link on documentation for
	  Japanese of SMTP.  [Fix GH-1380]

Sat Jun 11 15:02:45 2016  Grant Hutchins  <github@nertzy.com>
